--- a/templates/lista.html
+++ b/templates/lista.html
@@ -13,13 +13,17 @@
       <table class="table table-striped table-responsive table-bordered">
          <thead class="thead-default">
             <tr>
-               <th>Nome</th>
+               <th>nome</th>
+               <th>categoria</th>
+               <th>console</th>
             </tr>
         </thead>
         <tbody>
          {% for jogo in jogos %}
            <tr>
-              <td>{{jogo}}</td>
+              <td>{{jogo.nome}}</td>
+              <td>{{jogo.categoria}}</td>
+              <td>{{jogo.console}}</td>
            </tr>
           {% endfor %}
            
